# retrodrop-bot

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  run.sh
config/: db.py  logger.py
database/: connection.py  models.py
handlers/: commands_handler.py  leaderboard_handler.py  message_handler.py
utils/: helpers.py
